--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "modules/auth": "*",
         "modules/blog": "*",
         "modules/contact": "*",
+        "modules/coupon": "*",
         "modules/customer-account-layout": "*",
         "modules/customer-dashboard": "*",
         "modules/customer-frontend-layout": "*",
@@ -37,6 +38,7 @@
         "modules/page": "*",
         "modules/payment": "*",
         "modules/static-site": "*",
+        "modules/subscription": "*",
         "modules/test": "*",
         "modules/user-data": "*",
         "modules/utility": "*",
