--- a/app-modules/my-file/composer.json
+++ b/app-modules/my-file/composer.json
@@ -1,34 +1,19 @@
 {
     "name": "modules/my-file",
-    "description": "My File module for Laravel application with media library integration",
+    "description": "MyFile module for website content management",
     "type": "library",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Your Name",
-            "email": "your.email@example.com"
-        }
-    ],
-    "minimum-stability": "stable",
-    "prefer-stable": true,
-    "require": {
-        "php": "^8.1",
-        "laravel/framework": "^11.0|^12.0",
-        "spatie/laravel-medialibrary": "^11.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^10.0|^11.0"
-    },
+    "version": "1.0",
+    "license": "proprietary",
+    "require": {},
     "autoload": {
         "psr-4": {
-            "Modules\\MyFile\\": "src/"
+            "Modules\\MyFile\\": "src/",
+            "Modules\\MyFile\\Tests\\": "tests/",
+            "Modules\\MyFile\\Database\\Factories\\": "database/factories/",
+            "Modules\\MyFile\\Database\\Seeders\\": "database/seeders/"
         }
     },
-    "autoload-dev": {
-        "psr-4": {
-            "Modules\\MyFile\\Tests\\": "tests/"
-        }
-    },
+    "minimum-stability": "stable",
     "extra": {
         "laravel": {
             "providers": [
