working on support ticket

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,18 @@ APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
+# Support Configuration
+SUPPORT_EMAIL=support@example.com
+SUPPORT_HOURS_START=09:00
+SUPPORT_HOURS_END=18:00
+SUPPORT_TIMEZONE=UTC
+SUPPORT_BUSINESS_DAYS=Monday,Tuesday,Wednesday,Thursday,Friday
+SUPPORT_RESPONSE_NORMAL=24
+SUPPORT_RESPONSE_HIGH=8
+SUPPORT_RESPONSE_URGENT=2
+SUPPORT_NOTIFICATIONS_ENABLED=true
+SUPPORT_ADMIN_EMAILS=admin@example.com
+
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
 
